--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
       "react/prop-types": "off",
       "@typescript-eslint/explicit-module-boundary-types": "off",
       "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn"
+      "react-hooks/exhaustive-deps": "warn",
+      "@typescript-eslint/no-non-null-assertion": "off"
     }
 }
