--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@styled-icons/material-outlined": "^10.23.0",
     "next": "10.0.1",
     "next-pwa": "^3.1.5",
+    "polished": "^4.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
