--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
+    "react-slick": "^0.28.1",
     "styled-components": "^5.2.1",
     "styled-media-query": "^2.1.2"
   },
@@ -45,6 +46,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
+    "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.8.1",
