--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "@styled-icons/fa-brands": "^10.34.0",
     "@styled-icons/material-outlined": "^10.23.0",
     "next": "10.0.1",
     "next-pwa": "^3.1.5",
