--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.4.10",
     "@styled-icons/boxicons-regular": "^10.38.0",
     "@styled-icons/boxicons-solid": "^10.37.0",
     "@styled-icons/fa-brands": "^10.34.0",
     "@styled-icons/material-outlined": "^10.23.0",
+    "graphql": "^15.5.3",
     "next": "10.0.1",
     "next-pwa": "^3.1.5",
     "polished": "^4.0.5",
