--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "eslint src --max-warnings=0 --fix",
     "test": "jest",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "schema:download": "apollo client:download-schema --endpoint=http://localhost:1337/graphql schema-temp.gql",
+    "schema:convert": "node convertToNonNull.js",
+    "codegen": "apollo codegen:generate --target typescript --excludes=node_modules/ --includes=src/graphql/**/*.ts --localSchemaFile schema.gql --tagName=gql --outputFlat src/graphql/generated",
+    "types:generate": "yarn schema:download && yarn schema:convert && yarn codegen",
     "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "test:watch": "yarn test --watch",
     "storybook": "start-storybook -s ./public -p 6006 --no-dll",
@@ -56,6 +61,7 @@
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.8.1",
+    "apollo": "^2.33.6",
     "babel-loader": "^8.2.1",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
