--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@styled-icons/fa-brands": "^10.34.0",
     "@styled-icons/material-outlined": "^10.23.0",
     "graphql": "^15.5.3",
+    "lodash.xor": "^4.5.0",
     "next": "10.0.1",
     "next-pwa": "^3.1.5",
     "polished": "^4.0.5",
@@ -55,6 +56,7 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.15",
+    "@types/lodash.xor": "^4.5.6",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "@types/react-slick": "^0.23.4",
