--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@storybook/react": "^6.1.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^27.4.1",
     "@types/lodash.xor": "^4.5.6",
