--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "graphql": "^15.5.3",
     "lodash.xor": "^4.5.0",
     "next": "10.0.1",
+    "next-auth": "^3.11.2",
     "next-pwa": "^3.1.5",
     "polished": "^4.0.5",
     "react": "17.0.2",
@@ -58,6 +59,7 @@
     "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^27.4.1",
     "@types/lodash.xor": "^4.5.6",
+    "@types/next-auth": "^3.7.0",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-slick": "^0.23.4",
